- ajout vue jeu - gestion jeu

--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -559,9 +559,20 @@ background: #0033cc;
     text-transform: uppercase;
 }
 
+/**-----------------------------------------------
+--------------------------------------------------
+----------------------VUE JEU---------------------
+--------------------------------------------------
+-------------------------------------------------*/
 
+.description .imgJeu {
+    max-width: 100%;
+    height: auto;
+}
 
-
+.description {
+    margin-top: 100px;
+}
 
 
 
