--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -101,9 +101,10 @@ table {
     text-align: auto;
 }
 #listPropreJeux {
+    width: 70%;
     position: relative;
     margin: auto;
-    left: 2%;
+    /*left: 2%;*/
     text-align: center;
 }
 
@@ -112,6 +113,8 @@ table {
     margin: auto;
     text-align: center;
 }*/
+
+
 
 .jumbotron {
     background-color: whitesmoke;
@@ -163,9 +166,6 @@ table {
     text-shadow: 8px 8px 4px rgba(0, 0, 0, .1);
 }
 
-#jssor_1 {
-    box-shadow: 8px 8px 4px rgba(0, 0, 0, .1);
-}
 
 /* formulaire connexion, inscription*/
 
@@ -333,19 +333,7 @@ input[type=reset]:focus,
 
 
 
-/* Pour sauvegarde style initial....
 
-label.tab-label-4{
-background: #0033cc;
-    background: #0033cc;
-    background: -moz-linear-gradient(top, #5ba4a4 0%, #4e8c8a 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5ba4a4), color-stop(100%,#4e8c8a));
-	background: -webkit-linear-gradient(top, #5ba4a4 0%,#4e8c8a 100%);
-	background: -o-linear-gradient(top, #5ba4a4 0%,#4e8c8a 100%);
-	background: -ms-linear-gradient(top, #5ba4a4 0%,#4e8c8a 100%);
-	background: linear-gradient(top, #5ba4a4 0%,#4e8c8a 100%);
-        color: #385c5b;
-}*/
 
 .tabs label {
 	background: #0033cc;
