--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -481,6 +481,7 @@ input[type=reset]:focus,
     position: absolute;
 	top: 0;
 	left: 0;
+        width:100%;
 	bottom: 100%;
 	padding: 10px 40px;
 	overflow: auto; /* Overflow du contenu des onglets */
@@ -563,6 +564,10 @@ input[type=reset]:focus,
     background-color: #1565c0;
     text-transform: uppercase;
     padding: 8px;
+}
+
+.width60 {
+    width: 60%;
 }
 
 /**-----------------------------------------------
