Ajout liste généraliste d'items (users, jeux, evenements) 	=> v_listeadmin envoyés par c_admin
reste : boutons à implémenter (new + modifier + delete) pour chaque ligne.
+ bouton retour en bas.

--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -585,6 +585,14 @@ input[type=reset]:focus,
     width: 60%;
 }
 
+.width90 {
+    width: 90%;
+}
+
+.small {
+    font-size: 12px;
+}
+
 /**-----------------------------------------------
 --------------------------------------------------
 ----------------------VUE JEU---------------------
