Corrections suite tests

--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -1,7 +1,14 @@
+/* ==========================================================================
+   Fix pour le bug bootstrap pour les champs fichiers sous FireFox.
+   ========================================================================== */
+
+.heightfix {
+    height: auto;
+}
 
 
 /* ==========================================================================
-   Author's custom styles
+   custom styles
    ========================================================================== */
 
 
