--- a/Vue/css/main.css
+++ b/Vue/css/main.css
@@ -20,7 +20,11 @@ body {
 }
 
 footer {
+    background-color: white;
     position: fixed;
+    text-align: right;
+    width: 100%;
+    height: 25px;
     bottom: 0px;
     right: 10px;
 }
